Fixes bug 51237.  HTTP keep-alive confuses multiple ports on same host.  r=gagan, sr=mscott.